--- a/andchart/build.gradle
+++ b/andchart/build.gradle
@@ -1,4 +1,21 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
+apply plugin: 'com.jfrog.bintray'
+
+def bintrayUser = ""
+def bintrayKey = ""
+try {
+    bintrayUser = project.property("bintray.user")
+    bintrayKey = project.property("bintray.key")
+    println bintrayUser
+    println bintrayKey
+
+} catch (Exception ignore) {
+    println "Missing release keystore passwords, add the keys \"bintray.user\" and \"bintray.key\" to your gradle.properties file"
+}
+
+def niceVersion = "0.0.1"
+
 
 android {
     compileSdkVersion 25
@@ -28,4 +45,72 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.1.1'
     testCompile 'junit:junit:4.12'
+}
+
+
+
+def siteUrl = 'https://github.com/MazyNoc/AndChart'    // Homepage URL of the library
+def gitUrl = 'https://github.com/MazyNoc/AndChart.git' // Git repository URL
+group = "nu.annat.android"                               // Maven Group ID for the artifact
+version = niceVersion
+
+install {
+    repositories.mavenInstaller {
+        // This generates POM.xml with proper parameters
+        pom {
+            artifactId = "AndChart"
+            project {
+                packaging 'aar'
+
+                // Add your description here
+                name 'Graphs'
+                url siteUrl
+
+                // Set your license
+                licenses {
+                    license {
+                        name 'The Apache Software License, Version 2.0'
+                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
+                developers {
+                    developer {
+                        id 'MazyNoc'
+                        name 'Mikael Alfredsson'
+                        email 'MazyNoc@gmail.com'
+                    }
+                }
+                scm {
+                    connection gitUrl
+                    developerConnection gitUrl
+                    url siteUrl
+
+                }
+            }
+        }
+    }
+}
+
+task sourcesJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    classifier = 'sources'
+}
+
+artifacts {
+    archives sourcesJar
+}
+
+bintray {
+    user = bintrayUser
+    key =  bintrayKey
+
+    configurations = ['archives']
+    pkg {
+        repo = "maven"
+        name = "AndChart"
+        websiteUrl = siteUrl
+        vcsUrl = gitUrl
+        licenses = ["Apache-2.0"]
+        publish = true
+    }
 }
