--- a/andchart/build.gradle
+++ b/andchart/build.gradle
@@ -58,7 +58,7 @@ install {
     repositories.mavenInstaller {
         // This generates POM.xml with proper parameters
         pom {
-            artifactId = "AndChart"
+            artifactId = "andchart"
             project {
                 packaging 'aar'
 
@@ -107,7 +107,7 @@ bintray {
     configurations = ['archives']
     pkg {
         repo = "maven"
-        name = "AndChart"
+        name = "andchart"
         websiteUrl = siteUrl
         vcsUrl = gitUrl
         licenses = ["Apache-2.0"]
